# lablink-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  mcp_server.py  pyproject.toml  requirements.txt  server.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml
agentlink/: config.py  diagnostics.py  exceptions.py  scpi_logger.py  session.py  tools.py
demo/: pyproject.toml
demo/fake_instruments/: __init__.py  daq.py  utils.py  waveform_gen.py
docs/: ARCHITECTURE.md  lablink_plan.md
docs/agent_docs/: agent_development.md  current_status.md  implementation_log.md  project_goal.md  readme_agent.md  system_architecture.md
docs/archive/: agent-bootstrap.md  current_status_agentlink_visa.md
docs/planning/: plugin_registry_launch.md
docs/sessions/: 2026-05-26_session_playbook.md  2026-05-26_tool_feedback.md
examples/: topology.toml
examples/configs/: external_saleae.toml  python_shell_env.toml  rest_daq.toml  rest_home_assistant.toml  serial_device.toml  ssh_pi.toml  visa_scope.toml
examples/devices/: example_scope.toml
examples/instruments/: example_scope.toml
lablink/: base.py  cli.py  config.py  diagnostics.py  event_logger.py  exceptions.py  mcp_server.py  redaction.py  scpi_logger.py  session.py  system.py  tools.py
lablink/interfaces/: __init__.py
lablink/interfaces/external_mcp/: __init__.py  config.py  driver.py
lablink/interfaces/python_shell/: __init__.py  bootstrap.py  config.py  driver.py
lablink/interfaces/rest/: __init__.py  config.py  driver.py
lablink/interfaces/serial/: __init__.py  config.py  driver.py
lablink/interfaces/ssh/: __init__.py  config.py  driver.py
lablink/interfaces/visa/: __init__.py  config.py  driver.py
tests/: conftest.py  test_config.py  test_dispatch.py  test_fastmcp_late_registration.py  test_logger.py  test_redaction.py  test_shared_tools.py  test_system.py  test_tools.py
tests/interfaces/: test_external.py  test_python_shell.py  test_rest.py  test_serial.py  test_ssh.py  test_visa.py
