[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lablink-mcp"
version = "0.1.0"
description = "MCP server for AI agent control of test and measurement equipment via PyVISA"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
lablink = "cli:cli"
lablink-mcp = "mcp_server:main"

[project.optional-dependencies]
visa = ["pyvisa>=1.14", "pyvisa-py>=0.7"]
ssh = ["paramiko>=3.0"]
rest = ["httpx>=0.27"]
serial = ["pyserial>=3.5"]
python_shell = []
all = ["lablink-mcp[visa,ssh,rest,serial,python_shell]"]
dev = ["pytest>=8.0", "pyvisa>=1.14", "pyvisa-py>=0.7", "paramiko>=3.0", "httpx>=0.27", "pyserial>=3.5"]

[tool.hatch.build.targets.wheel]
include = ["lablink/**", "mcp_server.py", "cli.py"]
