[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lablink-mcp"
version = "0.1.0"
description = "MCP server for direct AI agent control of lab devices — VISA/SCPI instruments, SSH hosts, REST APIs, serial devices, and Python environments"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
    # core identity
    "mcp", "mcp-server", "fastmcp",
    # lab / instrument
    "lab-automation", "lab-instruments", "instrument-control", "test-equipment",
    "bench-instrument", "test-automation", "automated-test-equipment",
    # protocols shipped
    "visa", "scpi", "gpib", "pyvisa",
    "ssh", "paramiko",
    "rest", "rest-api",
    "serial", "rs232", "rs485",
    "python-shell",
    # protocols seeded
    "mqtt", "modbus", "opc-ua", "websocket", "can-bus",
    # hardware types
    "oscilloscope", "dmm", "power-supply", "function-generator",
    "spectrum-analyzer", "signal-analyzer",
    # platforms / SDKs
    "raspberry-pi", "nidaqmx", "picoscope", "ni-visa",
    # instrument brands
    "keysight", "tektronix", "rigol", "siglent", "rohde-schwarz",
    "fluke", "national-instruments", "lecroy", "anritsu", "yokogawa",
    "thorlabs", "newport", "arduino", "bk-precision",
    # ai / agent
    "ai-agents", "hardware-control", "hardware", "iot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.0",
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/techmanual-ai/lablink-mcp"
Repository = "https://github.com/techmanual-ai/lablink-mcp"
Issues = "https://github.com/techmanual-ai/lablink-mcp/issues"
Changelog = "https://github.com/techmanual-ai/lablink-mcp/blob/main/CHANGELOG.md"

[project.scripts]
lablink = "lablink.cli:cli"
lablink-mcp = "lablink.mcp_server:main"

[project.optional-dependencies]
visa = ["pyvisa>=1.14", "pyvisa-py>=0.7"]
ssh = ["paramiko>=3.0"]
rest = ["httpx>=0.27"]
serial = ["pyserial>=3.5"]
python_shell = []
all = ["lablink-mcp[visa,ssh,rest,serial,python_shell]"]
dev = ["pytest>=8.0", "pyvisa>=1.14", "pyvisa-py>=0.7", "paramiko>=3.0", "httpx>=0.27", "pyserial>=3.5"]

[tool.hatch.build.targets.wheel]
include = ["lablink/**"]
