[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fake-instruments"
version = "0.1.0"
description = "Dummy vendor SDK for exercising the LabLink python_shell driver"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2.0",   # pinned to numpy 1.x (old vendor SDK requirement)
    "pint>=0.22,<0.24",
    "tabulate>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fake_instruments"]
